Lock manager + Scheduler + GUI

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="lib/js/bootstrap.min.js"></script>
 
     <script src="js/operation.js"></script>
+    <script src="js/lock.js"></script>
     <script src="js/transaction.js"></script>
     <script src="js/2pl.js"></script>
     <title>Two Phase Locking Scheduler</title>
@@ -89,7 +90,7 @@
 
     <div align="center" class="divStartButton">
       <button type="button" class="btn btn-primary" onclick="schedule()">Escalonar</button>
-      <button type="button" class="btn btn-secondary" onclick="clearList()">Resetar</button>
+      <button type="button" class="btn btn-secondary" onclick="reset()">Resetar</button>
     </div>
 
     <div class="card" align="center">
